package com.grupo1.hoppi.ui.screens.login.forgotpassword

import androidx.compose.foundation.Image
import androidx.compose.foundation.background
import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.size
import androidx.compose.foundation.layout.width
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.foundation.text.KeyboardOptions
import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.Lock
import androidx.compose.material3.Button
import androidx.compose.material3.ButtonDefaults
import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.Surface
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.remember
import androidx.compose.runtime.getValue
import androidx.compose.runtime.setValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Brush
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.compose.ui.window.Dialog
import androidx.compose.ui.window.DialogProperties
import com.grupo1.hoppi.R
import com.grupo1.hoppi.ui.components.login.PasswordTextField
import com.grupo1.hoppi.ui.components.login.PawPrintsDecorationLocal
import com.grupo1.hoppi.ui.screens.login.auth.ForgotPasswordViewModel

@Composable
fun RecoveryStep3Screen(
    viewModel: ForgotPasswordViewModel,
    onPasswordChangeSuccess: () -> Unit
) {
    var password by remember { mutableStateOf("") }
    var checkPassword by remember { mutableStateOf("") }
    var visiblePassword by remember { mutableStateOf(false) }

    var showSuccessDialog by remember { mutableStateOf(false) }

    if (showSuccessDialog) {
        Dialog(
            onDismissRequest = { /* Não dismissível por clique externo para forçar o "Voltar" */ },
            properties = DialogProperties(dismissOnBackPress = false, dismissOnClickOutside = false)
        ) {
            Surface(
                shape = RoundedCornerShape(12.dp),
                color = Color.White,
                shadowElevation = 8.dp
            ) {
                Column(
                    modifier = Modifier.padding(vertical = 20.dp, horizontal = 40.dp),
                    horizontalAlignment = Alignment.CenterHorizontally,
                    verticalArrangement = Arrangement.Center
                ) {
                    Text(
                        text = "Senha Alterada",
                        style = MaterialTheme.typography.titleLarge.copy(
                            fontWeight = FontWeight.Bold
                        ),
                        modifier = Modifier.padding(bottom = 8.dp)
                    )
                    Text(
                        text = "Senha alterada com sucesso!",
                        modifier = Modifier.padding(bottom = 16.dp)
                    )

                    Button(
                        onClick = {
                            viewModel.setNewPassword(password)
                            viewModel.resetPassword {
                                showSuccessDialog = true
                            }
                            onPasswordChangeSuccess()
                        },
                        colors = ButtonDefaults.buttonColors(
                            containerColor = Color(0xFFEC8445)
                        ),
                        modifier = Modifier.width(124.dp)
                    ) {
                        Text("Voltar", color = Color.White)
                    }
                }
            }
        }
    }

    val gradientColors = listOf(
        Color(0xFFEC8445),
        Color(0xFFD1621F),
        Color(0xFFC84B00)
    )

    val verticalGradientBrush = Brush.verticalGradient(
        colors = gradientColors
    )

    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(verticalGradientBrush)
    ) {
        PawPrintsDecorationLocal(
            modifier = Modifier
                .fillMaxWidth()
                .align(Alignment.BottomEnd)
        )

        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(horizontal = 35.dp),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Top
        ) {
            Spacer(modifier = Modifier.height(85.dp))

            Image(
                painter = painterResource(id = R.drawable.logo_em_pe),
                contentDescription = "Logo Hoppi: coelho e texto",
                modifier = Modifier
                    .size(260.dp),
            )

            Text(
                text = "Se tem estudante, tem Hoppi",
                color = Color.White,
                style = MaterialTheme.typography.headlineLarge.copy(
                    textAlign = TextAlign.Center,
                    fontWeight = FontWeight.Bold,
                    fontSize = 23.sp
                ),
                modifier = Modifier
                    .fillMaxWidth()
            )

            Text(
                text = "Digite sua nova senha",
                color = Color.White,
                style = MaterialTheme.typography.headlineLarge.copy(
                    fontWeight = FontWeight.Bold,
                    textAlign = TextAlign.Start
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(top = 30.dp, bottom = 10.dp)
            )

            PasswordTextField(
                label = "Digite sua senha",
                placeholder = "Digite sua senha",
                value = password,
                onValueChange = { password = it },
                leadingIcon = Icons.Filled.Lock,
                visiblePassword = visiblePassword,
                onToggleVisibility = { visiblePassword = !visiblePassword },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Text)
            )

            Spacer(modifier = Modifier.height(20.dp))

            Text(
                text = "Sua senha deve ter, no mínimo",
                color = Color.White,
                style = MaterialTheme.typography.bodyMedium,
                modifier = Modifier.align(Alignment.Start)
            )

            Spacer(modifier = Modifier.height(5.dp))

            Text(
                text = "8 caracteres",
                color = Color.White,
                style = MaterialTheme.typography.bodyMedium.copy(
                    fontSize = 12.sp
                ),
                modifier = Modifier.align(Alignment.Start)
            )

            Text(
                text = "1 letra maiúscula",
                color = Color.White,
                style = MaterialTheme.typography.bodyMedium.copy(
                    fontSize = 12.sp
                ),
                modifier = Modifier.align(Alignment.Start)
            )

            Text(
                text = "1 número",
                color = Color.White,
                style = MaterialTheme.typography.bodyMedium.copy(
                    fontSize = 12.sp
                ),
                modifier = Modifier.align(Alignment.Start)
            )

            Text(
                text = "Confirme sua senha",
                color = Color.White,
                style = MaterialTheme.typography.headlineLarge.copy(
                    fontWeight = FontWeight.Bold,
                    textAlign = TextAlign.Start
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(top = 20.dp, bottom = 10.dp)
            )

            PasswordTextField(
                label = "Digite sua senha",
                placeholder = "Digite sua senha",
                value = checkPassword,
                onValueChange = { checkPassword = it },
                leadingIcon = Icons.Filled.Lock,
                visiblePassword = visiblePassword,
                onToggleVisibility = { visiblePassword = !visiblePassword },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Text)
            )

            Spacer(modifier = Modifier.height(30.dp))

            Button(
                onClick = {
                    if (password.isNotEmpty() && password == checkPassword) {
                        showSuccessDialog = true
                    }
                },
                Modifier.width(124.dp),
                colors = ButtonDefaults.buttonColors(
                    containerColor = Color.White,
                    contentColor = Color(0xFF4C4B4B)
                )
            ) {
                Text(
                    "Alterar",
                    style = MaterialTheme.typography.bodyLarge,
                    color = Color(0xFF000000),
                    modifier = Modifier.padding(vertical = 3.dp),
                    textAlign = TextAlign.Center
                )
            }
        }
    }
}