...
                ),
                modifier = Modifier
                    .fillMaxWidth()
            )

            Text(
                text = "Digite o código",
                color = Color.White,
                style = MaterialTheme.typography.headlineLarge.copy(
                    fontWeight = FontWeight.Bold,
                    textAlign = TextAlign.Center
                ),
                modifier = Modifier
...
                modifier = Modifier.width(124.dp),
                colors = ButtonDefaults.buttonColors(
                    containerColor = Color.White,
                    contentColor = Color(0xFF4C4B4B)
                )
            ) {
                Text("Validar", color = Color(0xFF4C4B4B))
            }

            Spacer(modifier = Modifier.height(20.dp))
        }
    }
}
...
